# arboretum

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: flake8.yml  linting.yml  plugin_preview.yml  test_and_deploy.yml  update_project_board.yml
.napari/: config.yml
arboretum/: __init__.py  _colormaps.py  core.py  graph.py  io.py  lineage.py  manager.py  plugin.py  tree.py  utils.py
arboretum/layers/track/: __init__.py  _track_utils.py  qt_tracks_layer.py  track.py  vispy_tracks_layer.py
arboretum/layers/tracks/: _track_shader.py  _track_utils.py  qt_tracks_layer.py  tracks.py  vispy_tracks_layer.py
examples/: arboretum.webm  show_large_tree.py  show_multi_merge.py  show_sample_data.py  show_tree_merges.py
napari_arboretum/: __init__.py  _colormaps.py  _hookimpls.py  graph.py  napari.yaml  plugin.py  tree.py  util.py
napari_arboretum/_tests/: test_dock_widget.py  test_graph.py  test_plugin.py  test_sample_data.py
napari_arboretum/io/: svg.py
napari_arboretum/sample/: __init__.py  registry.txt  sample_data.py
napari_arboretum/visualisation/: __init__.py  base_plotter.py  matplotlib_plotter.py  pyqtgraph_plotter.py  vispy_plotter.py
src/: tree.py
src/napari_arboretum/: __init__.py  graph.py  plugin.py  tree.py
src/napari_arboretum/io/: svg.py
src/napari_arboretum/visualisation/: matplotlib_plotter.py
tests/: test.py  test3D.py  test_plugin.py  test_sample_data.py
