[metadata]
name = napari-arboretum
author = Alan R. Lowe
author_email = a.lowe@ucl.ac.uk
license = LICENCE.md
url = https://github.com/quantumjot/arboretum
description = Track graph and lineage tree visualization with napari
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.8
use_scm_version = use_scm
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
include_package_data = True
packages = find:
setup_requires =
  setuptools_scm
install_requires =
  napari>=0.4.0
  napari-matplotlib
  numpy>=1.17.3
  pooch>=1
  pyqtgraph>=0.10.0
  scikit-image
  scipy>=1.3.1

[options.entry_points]
napari.manifest =
  napari-arboretum = napari_arboretum:napari.yaml

[options.package_data]
napari_arboretum = napari_arboretum/napari.yaml

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)
# E731 do not assign a lambda function
# W503	Line break occurred before a binary operator
# C901 McCabe complexity test.
ignore = E203, W503, E501, E731, C901
max-line-length = 79
max-complexity = 18
exclude =
  __init__.py
  napari_arboretum/_tests

[isort]
profile = black
