[metadata]
name = napari-arboretum
author = Alan R. Lowe
author_email = a.lowe@ucl.ac.uk
license = LICENCE.md
url = https://github.com/quantumjot/arboretum
description = Track graph and lineage tree visualization with napari
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.8
use_scm_version = use_scm
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
include_package_data = True
packages = find:
setup_requires =
  setuptools_scm
install_requires =
  matplotlib
  napari>=0.4.0
  napari-matplotlib>=0.2.1
  numpy>=1.17.3
  pandas
  pooch>=1
  qtpy
  scikit-image
  vispy

[options.entry_points]
napari.manifest =
  napari-arboretum = napari_arboretum:napari.yaml

[options.package_data]
napari_arboretum = napari_arboretum/napari.yaml
